# python_project_template

./: README.md  setup.cfg  setup.py
package_name/: __main__.py
src/package_name/: core.py  script.py
tests/: test_core.py
