[metadata]
# TODO
name = package_name
version = 0.1.0 
# TODO
description = some description
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://codeberg.org/username/reponame
# TODO
author = First Name
# TODO
author_email = my.name@some.domain
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
# TODO
packages = package_name
install_requires = file: requirements.txt

[options.entry_points]
# TODO
console_scripts =
    package_name = package_name.__main__:main
